FIX: in sticky header in profile page decreased right gap in mobile

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -375,6 +375,10 @@
       padding-left: 20px;
     }
 
+    .not-authorized & {
+      padding-right: 20px;
+    }
+
     .verified-user {
       color: inherit;
     }
